# verl-study

./: .gitignore  README.md  main.py  pyproject.toml
docs/: EVALUATION_DESIGN.md  INSTALLATION.md  OPTIMIZATION_COUNTDOWN.md  OPTIMIZATION_GSM8K.md  REWARD_COUNTDOWN.md  REWARD_GSM8K.md
scripts/: data_prep_countdown.py  data_prep_gsm8k.py  eval_countdown.py  eval_gsm8k.py  merge_fsdp_to_hf.py  reward_fn_countdown.py  reward_fn_gsm8k.py  run_grpo_countdown.sh  run_grpo_gsm8k.sh
