[project]
name = "verl-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "gymnasium>=1.0.0",
    "hydra-core>=1.3.2",
    "ray>=2.30.0",
    "tensordict>=0.8.0,!=0.9.0,<=0.10.0",
    "torch==2.8.0",
    "transformers>=4.51.0",
    "verl>=0.4.1",
    "vllm==0.11.0",
    "wandb>=0.23.1",
    "flash-attn==2.8.1",
    "numpy<2.0.0",
    "pyarrow>=15.0.0",
    "nvidia-ml-py>=12.560.30",
    "fastapi[standard]>=0.115.0",
    "optree>=0.13.0",
    "pydantic>=2.9",
    "grpcio>=1.62.1",
]

[[tool.uv.index]]
url = "https://mirrors.ivolces.com/pypi/simple/"
default = true

[tool.uv.sources]
verl = { git = "https://github.com/volcengine/verl.git", rev = "v0.7.0" }

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.8.0", "setuptools", "wheel"]